# openyapper

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.dev.yaml  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml  README.md  build.rs
backend/migrations/: 20240101000000_extensions_and_enums.sql  20240101000001_core_infrastructure.sql  20240101000002_media.sql  20240101000003_content.sql  20240101000004_blogs.sql  20240101000005_cv.sql  20240101000006_pages.sql  20240101000007_legal.sql  20240101000008_social_navigation.sql  20240101000009_taxonomy.sql  20240101000010_audit.sql  20240101000011_api_keys.sql  20240101000012_widen_key_prefix.sql  20240101000013_blog_content_body.sql  20240101000014_user_management.sql  20240101000015_documents.sql  20240101000016_media_folders.sql  20240101000017_document_file_upload.sql  20240101000018_navigation_menus.sql  20240101000019_site_memberships.sql  20240101000020_drop_old_user_tables.sql  20240101000021_api_keys_site_id_required.sql  20240101000022_webhooks.sql  20240101000023_editorial_workflow.sql  20240101000024_notifications.sql  20240101000025_redirects.sql  20240101000026_content_templates.sql
backend/scripts/: dev_init.sh  dev_init.sql  init-extensions.sql
backend/src/: lib.rs  main.rs  openapi.rs
backend/src/config/: database.rs  mod.rs  security.rs  settings.rs  storage.rs
backend/src/dto/: api_key.rs  audit.rs  auth.rs  blog.rs  bulk.rs  clerk.rs  config.rs  content.rs  content_template.rs  cv.rs  document.rs  environment.rs  health.rs  legal.rs  locale.rs  media.rs  media_folder.rs  mod.rs  navigation.rs  navigation_menu.rs  notification.rs  page.rs  redirect.rs  review.rs  site.rs  site_locale.rs  site_membership.rs  site_settings.rs  social.rs  taxonomy.rs  user.rs  webhook.rs
backend/src/errors/: api_error.rs  mod.rs
backend/src/guards/: auth_guard.rs  mod.rs  site_guard.rs
backend/src/handlers/: api_key.rs  audit.rs  auth.rs  blog.rs  clerk_user.rs  config.rs  content_template.rs  cv.rs  dashboard.rs  document.rs  environment.rs  legal.rs  locale.rs  media.rs  media_folder.rs  mod.rs  navigation.rs  navigation_menu.rs  notification.rs  page.rs  redirect.rs  site.rs  site_locale.rs  site_settings.rs  (+6 more)
backend/tests/: api_tests.rs  integration_tests.rs
(+318 files in other folders)
