[package]
name = "openyapper"
version = "1.0.0"
edition = "2021"
authors = ["OpenYapper Contributors"]
description = "OpenYapper - Multi-site CMS API built with Rust Rocket"
license = "AGPL-3.0-or-later"
repository = "https://github.com/dominikdorfstetter/openyapper"

[dependencies]
# Web Framework
rocket = { version = "0.5.1", features = ["json", "uuid", "tls"] }

# Async Runtime
tokio = { version = "1.49.0", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate"
] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Date/Time
chrono = { version = "0.4.43", features = ["serde"] }

# UUID
uuid = { version = "1.21.0", features = ["v4", "v5", "serde"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Environment & Config
dotenvy = "0.15.7"
config = "0.15.19"

# Logging & Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# Error Handling
thiserror = "2.0.18"
anyhow = "1.0.101"

# API Documentation
utoipa = { version = "5.4.0", features = ["rocket_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["rocket"] }

# Security
sha2 = "0.11.0-rc.5"
jsonwebtoken = "10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Redis (rate limiting)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Encoding
base64 = "0.22"

# Image processing
image = "0.25"
infer = "0.16"

# S3 storage (optional)
aws-sdk-s3 = "1.82"
aws-config = "1.6"

# Filesystem stats (disk usage for health checks)
nix = { version = "0.29", features = ["fs"] }

# RSS feed
rss = "2"

# Utilities
async-trait = "0.1.89"
futures = "0.3.32"
lazy_static = "1.5.0"
regex = "1.12.3"

[dev-dependencies]
# Testing
tokio-test = "0.4.5"
serial_test = "3.3.1"
fake = { version = "4.4.0", features = ["derive"] }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0

[profile.dev.package.sqlx-macros]
opt-level = 3
